--- a/package.json
+++ b/package.json
@@ -13,7 +13,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
-    "styled-components": "^6.0.8"
+    "react-particles": "^2.12.2",
+    "react-tsparticles": "^2.12.2",
+    "styled-components": "^6.0.8",
+    "tsparticles": "^2.12.0",
+    "tsparticles-engine": "^2.12.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
